# pico-sdk-PT-BR-2025.2

2025.2/conteudo_didatico/: Links.txt
2025.2/melhoriaDoc/: errosComuns.md
2025.2/traducoes/blink/: CMakeLists.txt  blink.c
2025.2/traducoes/dma/channel_irq/: CMakeLists.txt  channel_irq.c  pio_serialiser.pio
2025.2/traducoes/dma/control_blocks/: CMakeLists.txt  control_blocks.c
2025.2/traducoes/dma/hello_dma/: CMakeLists.txt  hello_dma.c
2025.2/traducoes/dma/sniff_crc/: CMakeLists.txt  sniff_crc.c
2025.2/traducoes/pwm/hello_pwm/: CMakeLists.txt  hello_pwm.c
2025.2/traducoes/pwm/led_fade/: pwm_led_fade.c
2025.2/traducoes/pwm/measure_duty_cycle/: CMakeLists.txt  measure_duty_cycle.c
2025.2/traducoes/uart/hello_uart/: CmakeLists.txt  hello_uart.c
2025.2/traducoes/uart/lcd_uart/: CMakeLists.txt  README.adoc  lcd_uart.c
2025.2/traducoes/uart/uart_advanced/: CMakeLists.txt  uart_advanced.c
pico-scheduler/: CMakeLists.txt
pico-scheduler/app/: main.c
pico-scheduler/core/: scheduler.c  scheduler.h
pico-scheduler/hal/: console.c  console.h
